Configure DB & Redis & add migration bundle.

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MvcMovieContext": "Data Source=MvcMovieContext-165b0603-5424-4d6f-a655-2ef950615ffe.db"
+    "AZURE_MYSQL_CONNECTIONSTRING": "Data Source=MvcMovieContext-165b0603-5424-4d6f-a655-2ef950615ffe.db"
   }
 }
